--- a/css/main2.css
+++ b/css/main2.css
@@ -35,6 +35,9 @@ body>.container {
   h4 {
     font-size: 12px;
   }
+  p {
+    font-size: 11px;
+  }
 }
 
 /* 轮播图左箭头 */
@@ -46,7 +49,6 @@ body>.container {
   background-position: center;
   display: inline-block;
 }
-
 .picRight {
   width: 50px;
   height: 100%;
@@ -61,25 +63,29 @@ body>.container {
   display: inline-block;
 }
 
+.carousel-inner>.item>p {
+  margin-top: -20px;
+  margin-bottom: 0;
+  padding-left: 10px;
+  text-shadow: 0 0 2px #fff;
+}
+
 #carouselBar {
   bottom: 0;
   margin-bottom: 0;
 }
-
 #carouselBar li {
   width: 50px;
   height: 10px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 0.4);
   border: 0;
   display: inline-block;
 }
-
 #carouselBar .active {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   border: 0;
   margin: 1px;
 }
-
 @media (max-width: 768px) {
   .picLeft, .picRight {
     width: 25px;
