--- a/css/gb-webstrap.css
+++ b/css/gb-webstrap.css
@@ -10,7 +10,9 @@ html {
 body {
   margin: 0;
   font-size: 14px;
-  font-family: Helvetica Neue, Helvetica, STHeiTi, Arial, sans-serif
+  font-family: 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif;
+  color: #333;
+  /*font-family: Helvetica Neue, Helvetica, STHeiTi, Arial, sans-serif*/
 }
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block
@@ -154,8 +156,8 @@ ol, ul {
 }
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
-  font-weight: 400;
-  line-height: 2
+  font-weight: bold;
+  /*line-height: 2*/
 }
 
 
@@ -287,13 +289,4 @@ ul.float-row>li {
 }
 .clearfix {
   *+height: 1%
-}
-
-body {
-  font-family: "Helvetica Neue", Helvetica, "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333;
-  background-color: #fff;
-  min-width: 1000px
 }
